--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,11 +1,9 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+ps4:
+  title: PS4 Fat
+  description: PS4 en buen estado
+  price: 150
 
-one:
-  title: MyString
-  description: MyText
-  price: 1
-
-two:
-  title: MyString
-  description: MyText
-  price: 1
+switch:
+  title: Nintendo Switch
+  description: Le falla el lector de tarjeta SD
+  price: 195
